# fastapi-ci-test

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
ci_test/: main.py  settings.py
tests/: test_status.py
