[tool.poetry]
name = "ci_test"
version = "0.1.0"
description = ""
authors = ["Daniil <danymstudy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.1"}


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
